Am adaugat un pachet in care am creat clase pentru fiecare erou, am adaugat un pachet nou pentru minionii cu abilitati speciale, in care am creat clase pentru fiecare minion cu abilitati, si am modificat putin structura proiectului